# os_exploration_poc

./: .gitignore  README.md
assembly/: .gitignore  boot.asm  build.sh  hello.asm  readme.md  run_asm.sh
graphics_exploration/: Cargo.toml
graphics_exploration/src/: main.rs  main__.rs
graphics_minifb/: Cargo.toml
graphics_pixels/: Cargo.toml
graphics_pixels/src/: main.rs
limin-rust-x64/: GNUmakefile
limin-rust-x64/kernel/: Cargo.toml  GNUmakefile
limin-rust-x64/kernel/src/: main.rs
limin-rust-x64/kernel/src/kernel/: idt.rs  interrupts.rs  interrupts_asm.rs  mod.rs  pic.rs  timer.rs
os_int_handler/: Cargo.toml  build.sh  run.sh  x86_64-unknown-none.json
os_int_handler/src/: main.rs  panic.rs
os_int_handler/src/kernel/: loggers.rs
os_interrupts/: Cargo.toml  build.sh  install_toolchain.sh  linker.ld
os_interrupts/.cargo/: config.toml
os_interrupts/iso/boot/grub/: grub.cfg
os_interrupts/src/: boot.s  idt.rs  main.rs  pic.rs  vga.rs  x86_64-unknow-none.json
os_scratch_64/: .gitignore  build.sh  linker.ld  readme.md
os_scratch_64/.cargo/: config.toml
os_scratch_64/src/: main.rs
os_scratch_64/src/kernel/: mod.rs  serial.rs
osone/: Cargo.toml  build_iso.sh  env_setup_ubuntu.sh  osone.json
osone/.cargo/: config.toml
osone/src/: main.rs  mem.rs
