[package]
name = "graphics_pixel"
version = "0.1.0"
edition = "2024"

[dependencies]
pixels = "0.15"
# On macOS enable the raw-window-handle feature that matches what other crates expect.
# Commonly pixels wants raw-window-handle v0.5 -> use rwh_05. If a crate requires 0.6, use rwh_06.
winit = { version = "0.30", features = ["rwh_05"] }
anyhow = "1.0"
